2007-06-23  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: document the files

	* Makefile: install pbuilder-test sample files.

	* examples/pbuilder-test/README: install pbuilder-test sample files.
	000_prepinstall
	001_apprun
	002_libfile
	002_sample.c
	003_makecheck
	004_ldd

	* examples/pbuilder-distribution.sh: $@ -> "$@"

2007-06-17  Junichi Uekawa  <dancer@debian.org>

	* pbuilder.8: fix incorrect banners in execution example.
	reorganize command-line parameters to be prepended with a '--', in
	par with cowdancer which uses getopt_long. getopt_long requires
	the '--'.

2007-06-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: rm "$APTCACHE"/*, instead of cleaning subdirectories. 
	Subdirectories shouldn't usually be created.

2007-06-15  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc.5: reorganize to maintain same ordering as pbuilder.8

	* pbuilder.8: reorganize the ordering of options.

2007-06-07  Junichi Uekawa  <dancer@debian.org>

	* Makefile (install): install rebuild example scripts.

	* examples/rebuild/getlist: 
	* examples/rebuild/buildall: 
	* examples/rebuild/README: add example rebuilding script.
	
2007-06-05  Junichi Uekawa  <dancer@debian.org>

	* AUTHORS: add people

2007-06-04  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: 
	* Documentation/pbuilder-doc.ja.po: reviewed and updated.

	* examples/C11screen: 
	* examples/C10shell: try installing vim and less, and cd to the source directory. 
	Inspired by Lo-lan-do.

2007-06-01  Junichi Uekawa  <dancer@debian.org>

	* testsuite/random-manual-test-material/control.test: move the debian/control file which
	was originally used for testing to here, not under debian/

	* pbuilder-satisfydepends-aptitude: 
	* pbuilder-satisfydepends-experimental: run dpkg-architecture inside chroot.

2007-05-31  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-runhooks: add documentation on usage of BUILDPLACE when
	already inside chroot.
