@@ -1,0 +1,36 @@
+The files in this directory (except pbuilderrc) were written by
+(C) 2006 Kapil Hari Paranjape <kapil@imsc.res.in>. 
+They are placed in the public domain. You can do with them exactly as you wish.
+
+These are scripts to help pbuilder run with the device mapper or LVM.
+(You do need "dmsetup" to be installed on your system.)
+
+I hope the files are reasonably well commented. If not please ask me.
+
+The rough order of things is as follows.
+
+1. Use a script like "sample_device_creator" to create two block
+devices. The BASE device should have enough space to hold the basic
+buildd environment (an unpacked base.tgz from pbuilder). The COW
+device should have enough space to perform the build.
+
+2. You should edit your ~/.pbuilderrc and add two lines
+	BASEDEV=<fullpath of base device>
+	COWDEV=<fullpath of cow device>
+
+3. Use a script like "sample_setup_base" to setup the BASE device. 
+Essentially this ensures that BASE device has a working (ext2) file
+system which has the entire chroot (e.g. just unpack base.tgz to this
+device). In addition, the BASE device *must* be "e2fsck -f"'ed in
+order that the resize works in the next step. Optionally you can set
+the BASE device to be a read-only device after this step.
+
+4. Now you can run "lvmbuilder <dsc_filename>" to build your package.
+	(a) It ought to be faster than unpacking base.tgz
+	(b) It will make no changes to the BASE device.
+
+Hope this helps!
+--
+Kapil Hari Paranjape
+Thu, 28 Sep 2006 12:40:12 +0530
+
