@@ -11,8 +11,11 @@ pbuilder (0.170) UNRELEASED; urgency=low
     pdebuild", thanks to Andres Mejia (Closes: #429770).
   * Documentation, examples/pbuilder-test/: add sample scripts for
     pbuilder-test, and add reference to it.
+  * Bug fix: "pbuilder: Some sample (device-mapper) cow build scripts",
+    thanks to Kapil Hari Paranjape (Closes: #389884).
+    Include lvmpbuilder sample implementation.
 
- -- Junichi Uekawa <dancer@debian.org>  Sat, 23 Jun 2007 19:35:44 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 23 Jun 2007 22:05:33 +0900
 
 pbuilder (0.169) unstable; urgency=low
 
