@@ -1,5 +1,7 @@
 2007-06-23  Junichi Uekawa  <dancer@debian.org>
 
+	* Makefile: install lvmpbuilder scripts as example.
+
 	* Documentation/pbuilder-doc.xml: document the files
 
 	* Makefile: install pbuilder-test sample files.
